<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Hero\'s land idle</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>

    <!-- Resources -->
    <string name="wood">wood</string>
    <string name="berries">berries</string>
    <string name="animals">animals</string>
    <string name="stone">stone</string>
    <string name="gold">gold</string>
    <string name="iron">iron</string>
    <string name="coal">coal</string>
    <string name="copper">copper</string>
    <string name="clay">clay</string>
    <string name="herb">herb</string>
    <string name="fish">fish</string>
    <string name="seaweed">seaweed</string>

    <!-- Tabs -->
    <string name="town">Town</string>
    <string name="equipment">Equipment</string>
    <string name="buildings">Buildings</string>
    <string name="upgrades">Upgrades</string>

    <!-- buttons -->
    <string name="expeditionButton">Go on expedition</string>
    <string name="btn_return_from_expedition">Come back</string>
    <string name="btn_harvest_resources">Harvest resources</string>
    <string name="btn_build">Build</string>
    <string name="btn_build_upgrade">Upgrade</string>
    <string name="btn_build_max">Max</string>


    <string-array name="land_types">
        <item>Forest</item>
        <item>Meadow</item>
        <item>Mountains</item>
        <item>Swamp</item>
        <item>Undergrounds</item>
    </string-array>

    <string-array name="buildings_types">
        <item>Town</item>
        <item>Marketplace</item>
        <item>Cathedral</item>
        <item>Adventures\' Guild</item>
    </string-array>

    <string-array name="buildings_descriptions">
        <item>Town you know</item>
        <item>You can buy and sell staff</item>
        <item>Gives Fatih</item>
        <item>Adds Quests</item>
    </string-array>

    <!-- menu -->
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>

    <!-- placeholders -->
    <string name="placeholder_res_type" translatable="false">Resource type</string>
    <string name="placeholder_res_amount" translatable="false">Resource amount</string>
    <string name="placeholder_building_type" translatable="false">Building type</string>
    <string name="placeholder_building_description" translatable="false">Building description</string>
    <string name="placeholder_building_lvl" translatable="false">0</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_exploration" translatable="false">ExplorationActivity</string>
    
    <!--    credits    -->
    <string name="credit_gui_buttons" translatable="false"><a href="https://www.freepik.com/vectors/background">Background vector created by upklyak - www.freepik.com</a></string>
    <string name="resources_type_2">Resources Type 2</string>
    <string name="resources_type_1">Resources Type 1</string>
    <string name="biom" translatable="false">biom</string>
    <string name="res_type_1" translatable="false">res type 1</string>
    <string name="res_amount_1" translatable="false">res amount 1</string>
    <string name="res_type_2" translatable="false">res type 2</string>
    <string name="res_amount_2" translatable="false">res amount 2</string>
    <string name="cancel">Cancel</string>
    <string name="arrow" translatable="false">❱</string>
</resources>