<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.HerosLandIdle.FullscreenContainer"
    tools:context=".activites.ExplorationActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/resources_type_2" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/resources_type_1" />

        <Button
            android:id="@+id/GoBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goBack"
            android:text="@string/btn_return_from_expedition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="205dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/biom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biom"
            app:layout_constraintBottom_toTopOf="@+id/res_type1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/res_type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_type_1"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/res_amount1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_amount_1"
            app:layout_constraintEnd_toEndOf="@+id/res_type1"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="@+id/res_type1"
            app:layout_constraintTop_toBottomOf="@+id/res_type1" />

        <Button
            android:id="@+id/btn_harvest_resources_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_harvest_resources"
            app:layout_constraintBottom_toTopOf="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="@+id/res_amount1"
            app:layout_constraintStart_toStartOf="@+id/res_amount1"
            app:layout_constraintTop_toBottomOf="@+id/res_amount1" />

        <TextView
            android:id="@+id/res_type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_type_2"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/res_amount2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/res_amount_2"
            app:layout_constraintEnd_toEndOf="@+id/res_type2"
            app:layout_constraintStart_toStartOf="@+id/res_type2"
            app:layout_constraintTop_toBottomOf="@+id/res_type2" />

        <Button
            android:id="@+id/btn_harvest_resources_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_harvest_resources"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="@+id/res_amount2"
            app:layout_constraintStart_toStartOf="@+id/res_amount2"
            app:layout_constraintTop_toBottomOf="@+id/res_amount2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>